add macOS files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,40 @@ rsconnect/
 .vagrant/
 *.box
 
-# Log files (if you are creating logs in debug mode, uncomment this)
+# Log files 
 *.log
+
+
+
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# iCloud generated files
+*.icloud
 
